# armphetamine

./: .depend  AUTHORS  ChangeLog  Makefile  Makefile.end  Makefile.start  NEWS  README  TODO  allocate.h  analyse.c  analyse.h  armtest.c  asmalu.h  asmalutab.c  bset.c  bset.h  clist.c  clist.h  cnew.h  codegen.c  codegen.h  debug.c  debug.h  decode.c  decode.h  decodet.c  defs.h  depend.sh  depfilt.c  dhry-tmpl.txt  disassemble.c  disassemble.h  div  div.txt  divide.arm.s  dynsupport.asm  dynsupport.h  emulate  execute.c  (+80 more)
armemu/: .depend  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  allocate.h  analyse.c  asm.foo  asmalu.h  asmalutab.c  block.h  cnew.c  codegen.c  config.cache  config.status  configure  configure.in  dag.c  dag.h  dec4.cc  decode.h  decode.s  decode3.c  decode3.s  decode4.h  disassemble.c  emit2.c  emit2.h  emit3.cc  emit3.h  execute.c  execute.h  extract.pl  fakesys.c  fakesys.h  fn.c  foo_.h  gen_dp.c  (+41 more)
armemu/.deps/: cnew.P  decode3.P  disassemble.P  execute.P  loadaout.P  machine.P  main.P  memory.P  processor.pp  registers.P  test.P
armemu/deprecated/: decode.c  decode2.c
armemu/docs/: Makefile  addrule.eps  apa.aux  apa.tex  apb.aux  apb.tex  apc.tex  apctable.tex  armtable.eps  armtable.tex  ch1.aux  ch1.tex  ch2.aux  ch2.tex  ch3.aux  ch3.tex  ch4.aux  ch4.tex  ch5.aux  ch5.tex  diss.aux  diss.bbl  diss.blg  diss.dvi  diss.lof  diss.tex  diss.toc  intermeddefs.tex  intexampletable.tex  lyxtest.tex  oldtimetable.tex  originality.tex  pheta.tex  profile.eps  proforma.aux  proforma.tex  propbody.aux  propbody.tex  proposal.ps  (+11 more)
(+119 files in other folders)
