
bin_PROGRAMS = armemu
armemu_SOURCES = cnew.c decode3.c disassemble.c execute.c loadaout.c \
				machine.c main.c memory.c registers.c fakesys.c list.c \
				hash.c pseudo.c pseudodism.c block.c allocate.c analyse.c \
				x86asm.c codegen.c x86dism.c generators.c riscos.c pqueue.c \
				nativesupport.c
armemu_LDADD = 

